<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMotion</string>
    <string name="app_subtitle">Object Tracking &amp; Canvas Centering</string>
    <string name="import_video">Import Video</string>
    <string name="no_video_selected">No video loaded. Tap above to import a video file.</string>
    <string name="select_object_hint">Drag or resize the cyan box to select the target object.</string>
    <string name="export_btn">⚡ EXPORT CENTERED VIDEO (MediaCodec)</string>
    <string name="export_destination_hint">Saved to: /Movies/SMotion/*.mp4</string>
    <string name="zoom_label">Zoom: 1.20x</string>
    <string name="smooth_label">Smoothness: 0.40 (Cinematic)</string>
    <string name="draw_reticle">Draw Target Crosshair Reticle</string>
    <string name="preset_small">Small (10%)</string>
    <string name="preset_medium">Medium (20%)</string>
    <string name="preset_large">Large (35%)</string>
    <string name="preset_reset">Reset Center</string>
    <string name="exporting_title">Exporting Centered Video</string>
    <string name="cancel">Cancel</string>
    <string name="play_output">Play Video</string>
    <string name="share_output">Share Video</string>
    <string name="open_folder">Open /Movies/SMotion</string>
</resources>
